--- a/views/foods/index.ejs
+++ b/views/foods/index.ejs
@@ -14,7 +14,7 @@
     <ul>
       <% foods.forEach((food) => { %>
         <li>
-          <a href="/foods/<%= food._id %>"><%= food.name %></a>
+          <a href="/users/<%= user._id %>/foods/<%= food._id %>"><%= food.name %></a>
         </li>
       <% }) %>
   </body>
