fix req.session from req.params

--- a/views/foods/index.ejs
+++ b/views/foods/index.ejs
@@ -8,7 +8,7 @@
   <body>
   <%- include('../partials/_navbar.ejs') %>
     <h1>Welcome to my Pantry</h1>
-    <a class="add-food" href="/foods/new">Add a Food</a>
+    <a class="add-food" href="/users/<%= user._id %>/foods/new">Add a Food</a>
     <h2>Here are the foods in your pantry:</h2>
 
     <ul>
