--- a/views/foods/new.ejs
+++ b/views/foods/new.ejs
@@ -20,6 +20,9 @@
       <input type="number" name="quantity" id="quantity" required />
       
       <button type="submit">Create</button>
+
       <a href="/foods">Cancel</a>
+
+    </form>
   </body>
 </html>
