--- a/views/foods/new.ejs
+++ b/views/foods/new.ejs
@@ -9,7 +9,7 @@
     <%- include('../partials/_navbar.ejs') %>
     <h1>New Food Page</h1>
 
-    <form action="/foods" method="POST">
+    <form action="/users/<%= user._id %> %>/foods" method="POST">
       <label for="name">Name:</label>
       <input type="text" name="name" id="name" required />
 
