link all views, add show.ejs

--- a/views/foods/index.ejs
+++ b/views/foods/index.ejs
@@ -6,16 +6,22 @@
     <title>My Pantry</title>
   </head>
   <body>
-  <%- include('../partials/_navbar.ejs') %>
+    <%- include('../partials/_navbar.ejs') %>
     <h1>Welcome to my Pantry</h1>
-    <a class="add-food" href="/users/<%= user._id %>/foods/new">Add a Food</a>
-    <h2>Here are the foods in your pantry:</h2>
-
-    <ul>
-      <% foods.forEach((food) => { %>
-        <li>
-          <a href="/users/<%= user._id %>/foods/<%= food._id %>"><%= food.name %></a>
-        </li>
-      <% }) %>
+    <a href="/users/<%= id%>/foods">View my Pantry</a>
+    <!-- List of Pantries here -->
+     <!--I need to have a show page, button for edit and delete-->
+    <a href="/users/<%= id %>/foods/new">Create New Food</a>
+    <h1 class ="center-align">List of Pantries</h1>
+   
+    <div class="container">
+      <ul class="collection">
+        <% pantry.forEach(food => { %>
+          <li class="collection-item">
+            <a href="/users/<%= user._id %>/foods/<%= food._id %>"> <%= food.name %></a>
+          </li>
+          <% })%>
+      </ul>
+    </div>
   </body>
 </html>
