remove excessive links, change route render

--- a/views/foods/index.ejs
+++ b/views/foods/index.ejs
@@ -8,11 +8,9 @@
   <body>
     <%- include('../partials/_navbar.ejs') %>
     <h1>Welcome to my Pantry</h1>
-    <a href="/users/<%= id%>/foods">View my Pantry</a>
-    <!-- List of Pantries here -->
      <!--I need to have a show page, button for edit and delete-->
     <a href="/users/<%= id %>/foods/new">Create New Food</a>
-    <h1 class ="center-align">List of Pantries</h1>
+    <h1 class ="center-align">List of Food</h1>
    
     <div class="container">
       <ul class="collection">
