--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
   <%- include('./partials/_navbar.ejs') %>
-  <a href="/users/<%= user._id %>/foods/new">Add a Food</a>
+  <h1>Home Page</h1>
   <h1>Welcome to CookBook</h1>
 </body>
 
