--- a/views/foods/show.ejs
+++ b/views/foods/show.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/partials.css">
+    
     <title><%= user.username %>'s Pantry</title>
 </head>
 <body>
@@ -18,7 +19,7 @@
             <div class="card-action">
                 <a href="/users/<%= user._id %>/foods/<%= foodItem._id %>/edit" class="btn waves-effect waves-light teal">Edit</a>
                 <form action="/users/<%= user._id %>/foods/<%= foodItem._id%>?_method=DELETE" method="POST">
-                <button class="btn red waves-effect waves-light">Delete</button>
+                <button class="delete-btn">Delete</button>
                 </form>
             </div>
         </div>
