--- a/public/css/partials.css
+++ b/public/css/partials.css
@@ -4,5 +4,23 @@
     border-radius: 0;
     margin-bottom: 0;
     min-height: 50px;
-    padding: 0;
+    padding: 5em;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.5em;
+}
+
+#nav-header {
+  color: #97d6c1;
+  size: 1em !important;
+  margin: 0;
+}
+
+.authlink {
+  text-decoration: none;
+  margin: 0 15px;
+  color: black;
+
 }
