--- a/public/css/partials.css
+++ b/public/css/partials.css
@@ -4,7 +4,7 @@
     border-radius: 0;
     margin-bottom: 0;
     min-height: 50px;
-    padding: 5em;
+    padding: 1em;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -13,7 +13,7 @@
 }
 
 #nav-header {
-  color: #97d6c1;
+  color: #031c14;
   size: 1em !important;
   margin: 0;
 }
