--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,13 +5,16 @@ body {
   height: 100vh;
   width: 100vw;
   background-color: #004d40;
-  background-image: url('images/image.jpeg');
+  background-image: url('images/veggie-wall.jpeg');
+  background-size: cover;
+  background-position: center;
 }
 
 form {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  align-items: center;
   width: 20em;
   height: 50%;
   background-color: #053502;
@@ -22,7 +25,7 @@ form {
 }
 
 h1 {
-  color: #97d6c1;
+  color:  #053502;
   font-size: 2em;
   margin: 0;
   display: flex;
@@ -35,4 +38,44 @@ label {
   margin: 0;
   display: flex;
   justify-content: space-evenly;
+}
+
+.new-food-link {
+  color: #0b0f0c;
+  font-size: 1.2em;
+  margin: 0;
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.food-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: 20em;
+  height: 50%;
+  background-color: #053502;
+  padding: 10px 20px 10px 20px;
+  border-radius: 20px;
+  color: #0b0f0c;
+  font-weight: bold;
+  align-items: center;
+  margin-bottom: 10px;
+  font-size: large;
+
+}
+
+ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+
+}
+
+.food-item img {
+  width: 80px;
+  height: 80px;
 }
