--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -7,7 +7,7 @@
   <div class="navbar-left">
     <a id="nav-header" href="/">Home</a>
     <% if(user) { %>
-      <a id="nav-header" href="/users/<%=user._id%>/foods">View my Pantry</a>
+      <a id="nav-header" href="/users/<%=user._id%>/foods">Pantry</a>
     <% } %>
   </div>
   <div class="navbar-right">
