--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,10 +17,10 @@ body::before {
   width: 100%;
   height: 100%;
   background-image: url('images/veggie-wall.jpeg');
-  background-size: contain; 
+  background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  z-index: -2; 
+  z-index: -2;
 }
 
 /* Black fade effect */
@@ -31,8 +31,8 @@ body::after {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.7), transparent);
-  z-index: -1; 
+  background: linear-gradient(to bottom, transparent, #000000b3, transparent);
+  z-index: -1;
 }
 
 form {
@@ -42,7 +42,7 @@ form {
   align-items: center;
   width: 20em;
   height: 50%;
-  background-color: rgba(5, 53, 2, 0.9); 
+  background-color: #053502e6;
   padding: 30px 40px 20px 40px;
   border-radius: 20px;
   color: #0b0f0c;
@@ -52,9 +52,38 @@ form {
 }
 
 h1 {
-  color: #053502;
+  color: #f47600;
   font-size: 2em;
   margin: 0;
+}
+
+h2 {
+  color: #f47600;
+  font-size: 1.5em;
+  margin: 0;
+  margin-bottom: 10px;
+  margin-bottom: 20px;
+  align-items: center;
+  font-weight: bold;
+  text-align: center;
+}
+
+p {
+  color: #f47600;
+  font-size: 1.2em;
+  margin: 0;
+  margin-bottom: 10px;
+  margin-bottom: 20px;
+  align-items: center;
+  font-weight: bold;
+  text-align: center;
+}
+
+ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 label {
@@ -63,8 +92,18 @@ label {
   margin: 0;
 }
 
+.btn {
+  color: #f47600;
+  font-size: 1.5em;
+  margin: 0;
+  padding: 10px 20px;
+  border-radius: 20px;
+  background-color: #053502e6;
+  cursor: pointer;
+}
+
 .new-food-link {
-  color: #0b0f0c;
+  color: #f47600;
   font-size: 1.2em;
   margin: 20px 0;
 }
@@ -75,7 +114,7 @@ label {
   justify-content: space-evenly;
   width: 20em;
   height: 50%;
-  background-color: rgba(5, 53, 2, 0.9);
+  background-color: #053502e6;
   padding: 10px 20px;
   border-radius: 20px;
   color: #0b0f0c;
@@ -83,18 +122,15 @@ label {
   align-items: center;
   margin-bottom: 10px;
   font-size: large;
-}
-
-ul {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
+  cursor: pointer;
+  text-decoration-color: #f47600;
 }
 
 .food-item img {
   width: 80px;
   height: 80px;
+  object-fit: cover;
+  border-radius: 50%;
 }
 
 .content {
@@ -112,18 +148,19 @@ ul {
   align-items: center;
   gap: 1em;
   text-align: center;
-  margin-bottom: 2em;
+  margin-bottom: 1em;
+  margin-top: 2em;
 }
 
 .page-header h1 {
   font-size: 2.5em;
-  color: #053502;
+  color: #f47600;
   margin: 0;
 }
 
 .new-food-link {
   font-size: 1.2em;
-  background-color: #14c762;
+  background-color: #053502;
   color: #ffffff;
   text-decoration: none;
   padding: 0.5em 1em;
@@ -132,5 +169,26 @@ ul {
 }
 
 .new-food-link:hover {
-  background-color: #0e8f45;
+  background-color: #f47600;
+}
+
+a:visited {
+  text-decoration: none;
+  color: #f47600;
+}
+
+a:hover {
+  text-decoration: none;
+  color: #f47600;
+}
+
+a:focus {
+  text-decoration: none;
+  color: #f47600;
+}
+
+a:hover,
+a:active {
+  text-decoration: none;
+  color: #f47600
 }
