--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -9,13 +9,16 @@
 </head>
 <body>
   <%- include('../partials/_navbar.ejs') %>
-  <h1>Sign in</h1>
+  <h1 class="page-header" >Sign in</h1>
   <form action="/auth/sign-in" method="POST">
+    
     <label for="username">Username:</label>
     <input type="text" name="username" id="username" required />
+
     <label for="password">Password:</label>
     <input type="password" name="password" id="password" required />
-    <button type="submit">Sign in</button>
+
+    <button class="btn" type="submit">Sign in</button>
   </form>
 </body>
 </html>
