--- a/views/foods/new.ejs
+++ b/views/foods/new.ejs
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/partials.css" />
-    
-    <title>New Food</title>
-  </head>
-  <body>
-    <%- include('../partials/_navbar.ejs') %>
-    <h1>New Food Page</h1>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="/css/partials.css" />
+
+  <title>New Food</title>
+</head>
+
+<body>
+  <%- include('../partials/_navbar.ejs') %>
+    <header class="page-header">
+      <h1>New Food Page</h1>
+      <a class="btn" href="/users/<%= user._id %>/foods">Back to Foods List</a>
+    </header>
 
     <form action="/users/<%= user._id %> %>/foods" method="POST">
       <label for="name">Name:</label>
@@ -18,10 +23,11 @@
 
       <label for="description">Description:</label>
       <input type="text" name="description" id="description" required />
-      
+
       <button type="submit">Create</button>
 
     </form>
     <a href="/users/<%= user._id %>/foods">Back to Foods List</a>
-  </body>
+</body>
+
 </html>
