--- a/views/foods/show.ejs
+++ b/views/foods/show.ejs
@@ -1,28 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/partials.css">
-    
-    <title><%= user.username %>'s Pantry</title>
+
+    <title>
+        <%= user.username %>'s Pantry
+    </title>
 </head>
+
 <body>
     <%- include('../partials/_navbar.ejs') %>
-    <div class="container bottomMargin" >
-        <div class="card">
-            <div class="card-content">
-                <p><strong>Name:</strong><%= foodItem.name %></p>
-                <p><strong>Description:</strong><%= foodItem.description %></p>
-            </div>
-            <div class="card-action">
-                <a href="/users/<%= user._id %>/foods/<%= foodItem._id %>/edit" class="btn waves-effect waves-light teal">Edit</a>
-                <form action="/users/<%= user._id %>/foods/<%= foodItem._id%>?_method=DELETE" method="POST">
-                <button class="delete-btn">Delete</button>
-                </form>
+        <header class="page-header">
+            <h1>
+                <%= user.username %> pantry
+            </h1>
+            <a class="btn" href="/users/<%= user._id %>/foods/<%= foodItem._id %>/edit">Edit</a>
+        </header>
+        <div class="container bottomMargin">
+            <div class="card">
+                <div class="card-content">
+                    <p><strong>Name :</strong>
+                        <%= foodItem.name %>
+                    </p>
+                    <p><strong>Description :</strong>
+                        <%= foodItem.description %>
+                    </p>
+                </div>
+                <div class="card-action">
+                    <form action="/users/<%= user._id %>/foods/<%= foodItem._id%>?_method=DELETE" method="POST">
+                        <button class="btn">Delete</button>
+                    </form>
+                </div>
             </div>
         </div>
-     </div>
 </body>
+
 </html>
