--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,6 +35,7 @@ body::after {
   z-index: -1;
 }
 
+
 form {
   display: flex;
   flex-direction: column;
@@ -133,6 +134,14 @@ label {
   border-radius: 50%;
 }
 
+.food-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 10px;
+  padding: 10px;
+}
+
 .content {
   max-width: 1200px;
   margin: 0 auto;
@@ -140,6 +149,9 @@ label {
   display: flex;
   flex-direction: column;
   gap: 2em;
+  display: flex;
+  flex-direction: column;
+  
 }
 
 .page-header {
