--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -12,7 +12,8 @@
 <body>
   <%- include('../partials/_navbar.ejs') %>
     <header class="page-header">
-      <h1>Create a new account!</h1>
+      <h1>Sign Up</h1>
+      <h2>Create an account!</h2>
     </header>
     <form action="/auth/sign-up" method="POST">
       <label for="username">Username:</label>
