--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -10,6 +10,12 @@
       <a id="nav-header" href="/users/<%=user._id%>/foods">Pantry</a>
     <% } %>
   </div>
+  <div class="navbar-center">
+    <a id="nav-header" href="/controllers/user.js">Community</a>
+    <% if(user) { %>
+      <a id="nav-header" href="/users/<%=user._id%>"><%= user.username %></a>
+    <% } %>
+  </div>
   <div class="navbar-right">
     <% if(user) { %>
       <a class="auth-link" href="/auth/sign-out">Sign Out</a>
