link app.use user recipes ingredients

--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -11,7 +11,7 @@
     <% } %>
   </div>
   <div class="navbar-center">
-    <a id="nav-header" href="/controllers/user.js">Community</a>
+    <a id="nav-header" href="../user.js">Community</a>
     <% if(user) { %>
       <a id="nav-header" href="/users/<%=user._id%>"><%= user.username %></a>
     <% } %>
